# ICCore

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: Camera.h  Data.h  IShader.h  Image.h  Logger.h  Material.h  Mesh.h  Primitives.h  Window.h
include/opengl/: OpenGLShader.h
src/: Camera.cpp  Image.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Window.cpp
src/opengl/: OpenGLShader.cpp
